[gd_scene load_steps=58 format=2]

[ext_resource path="res://actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://actors/player/mario_sheet.png" type="Texture" id=2]
[ext_resource path="res://actors/player/fludd_sheet.png" type="Texture" id=3]
[ext_resource path="res://audio/sfx/fludd/hover.mp3" type="AudioStream" id=4]
[ext_resource path="res://audio/sfx/fludd/hover_loop.mp3" type="AudioStream" id=5]
[ext_resource path="res://gui/gui.tscn" type="PackedScene" id=15]
[ext_resource path="res://actors/particles/dust.png" type="Texture" id=18]
[ext_resource path="res://src/global/dejitter.gd" type="Script" id=19]
[ext_resource path="res://actors/player/dust_material.tres" type="Material" id=20]
[ext_resource path="res://actors/player/camera.gd" type="Script" id=25]
[ext_resource path="res://gui/hud/water_meter/water_meter_bubble_medium.png" type="Texture" id=34]
[ext_resource path="res://gui/hud/water_meter/water_meter_bubble_small.png" type="Texture" id=35]
[ext_resource path="res://actors/player/bubbles.gd" type="Script" id=37]
[ext_resource path="res://actors/player/bubble.tres" type="Material" id=38]
[ext_resource path="res://audio/sfx/fludd/fludd_switch.wav" type="AudioStream" id=56]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 264, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 288, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 312, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 216, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 240, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 408, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 96, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 264, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 312, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 144, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 24, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 168, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 38 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 120, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 48, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 192, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 72, 38, 24, 38 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 408, 0, 24, 38 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "flip",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "spin_fludd",
"speed": 20.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "swim_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "dive_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "pound_fall",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "jump_double",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "jump_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "spin",
"speed": 20.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "jump_double_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "swim",
"speed": 4.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "walk_fludd",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "flip_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "shine",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "fall_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "front_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "pound_fall_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "back_fludd",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "dive",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 28, 30 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 28, 30 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 28, 30 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 28, 30 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "rocket",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ) ],
"loop": true,
"name": "turbo",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "hover_front",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 14.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 0.999998 )

[sub_resource type="ParticlesMaterial" id=44]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 5.0
gravity = Vector3( 0, 450, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=43]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 4, 0, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Character" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "fall"
playing = true
script = ExtResource( 19 )

[node name="Fludd" type="AnimatedSprite" parent="Character"]
show_behind_parent = true
frames = SubResource( 36 )
animation = "hover"
offset = Vector2( -2, -2 )

[node name="WaterCheck" type="Area2D" parent="."]
position = Vector2( 0, 4 )
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCheck"]
shape = SubResource( 4 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
current = true
process_mode = 0
smoothing_enabled = true
script = ExtResource( 25 )

[node name="Tween" type="Tween" parent="Camera2D"]
pause_mode = 1

[node name="GUI" parent="Camera2D" instance=ExtResource( 15 )]
follow_viewport_enable = false

[node name="Voice" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
bus = "SFX"

[node name="Step" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[node name="DiveAngling" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 18 )

[node name="BackupAngle" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackupAngle"]
position = Vector2( 0, 10 )
shape = SubResource( 6 )

[node name="BubbleViewport" type="Viewport" parent="."]
size = Vector2( 640, 360 )
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="BubblesSmall" type="Particles2D" parent="BubbleViewport"]
emitting = false
amount = 30
lifetime = 0.5
visibility_rect = Rect2( -14, 0, 26, 211 )
local_coords = false
process_material = SubResource( 44 )
texture = ExtResource( 35 )

[node name="BubblesMedium" type="Particles2D" parent="BubbleViewport"]
emitting = false
amount = 27
lifetime = 0.5
visibility_rect = Rect2( -14, 0, 26, 211 )
local_coords = false
process_material = SubResource( 44 )
texture = ExtResource( 34 )

[node name="Bubbles" type="Sprite" parent="."]
material = ExtResource( 38 )
z_index = -1
script = ExtResource( 37 )

[node name="SwitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 56 )
bus = "SFX"

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SFX"

[node name="HoverLoopSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "SFX"

[node name="Dust" type="Particles2D" parent="."]
material = ExtResource( 20 )
position = Vector2( 0, 11.5 )
z_index = -1
amount = 6
lifetime = 0.35
visibility_rect = Rect2( -4, -12, 8, 12 )
local_coords = false
process_material = SubResource( 43 )
texture = ExtResource( 18 )

[node name="StepCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )

[connection signal="area_entered" from="WaterCheck" to="." method="_on_WaterCheck_area_entered"]
[connection signal="area_exited" from="WaterCheck" to="." method="_on_WaterCheck_area_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="BackupAngle" to="." method="_on_BackupAngle_body_entered"]
[connection signal="body_exited" from="BackupAngle" to="." method="_on_BackupAngle_body_exited"]
